--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,5 +5,5 @@
 <div class="jumbotron">
     <h1>Image Tools</h1>
     <p class="lead">Web API tools for image manipulations.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">See more on GitHub&raquo;</a></p>
+    <p><a href="https://github.com/noamyg/ImageTools" class="btn btn-primary btn-lg">See more on GitHub&raquo;</a></p>
 </div>
