--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,6 +21,9 @@
                 <li class="nav-item">
                     @Html.ActionLink("Convert", "Index", "Convert", new { }, new { @class = "nav-link" })
                 </li>
+                <li class="nav-item">
+                    @Html.ActionLink("Arrange", "Index", "Arrange", new { }, new { @class = "nav-link" })
+                </li>
             </ul>
         </div>
     </nav>
