--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                 <li class="nav-item">
                     @Html.ActionLink("Arrange", "Index", "Arrange", new { }, new { @class = "nav-link" })
                 </li>
+                <li class="nav-item">
+                    @Html.ActionLink("Resize", "Index", "Resize", new { }, new { @class = "nav-link" })
+                </li>
             </ul>
         </div>
     </nav>
